# elasticsearch

./: .Brewfile  .gitignore  .mise.toml  .pre-commit-config.yaml  .vale.ini  pyproject.toml
SNMP-BRIDGE/: .gitignore  .pre-commit-config.yaml  README.md  config.yaml.example  devbox.json  requirements.txt  sequence-diagram.mmd  setup.py
aggregate-thresholds/: .gitignore  .mise.toml  .pre-commit-config.yaml  FLOWCHART.mmd  README.md  devtools.txt  docker-compose.yml  generator.py  package.json  pyproject.toml  tests.txt  vulcanizer
aggregate-thresholds/.mise/tasks/: install-vulcanizer.sh  mermaid-install.sh  mermaid-render.sh  venv-activate.sh  vulcanizer-install.sh
aggregate-thresholds/docker/: docker-compose.yml  setup.sh
aggregate-thresholds/pipelines/: kafka_health_pipeline.json  mysql_health_pipeline.json  system_health_pipeline.json
aggregate-thresholds/terraform/: .terraform-docs.yml  DOCUMENTATION.md  README.md  backend.tf  cleanup.sh  enrich_policy.tf  indices.tf  main.tf  outputs.tf  pipelines.tf  providers.tf  schema.json  terraform.tfvars.example  thresholds.tf  transform.tf  variables.tf
aggregate-thresholds/terraform/pipelines/: kafka_health_pipeline.json  kafka_health_script.painless  mysql_health_pipeline.json  mysql_health_script.painless  slo_health_pipeline.json  slo_health_script.painless  system_health_pipeline.json  system_health_script.painless
docker/: README.md  docker-compose.yml  instances.yml  setup.sh
experiments/: readme.md  snmp-scanner.py  test.pu
presentations/: .gitignore  README.md  package.json  snmp-new.md  snmp.md.bak
(+71 files in other folders)
